# Intelligent-Document-Processing-NLP

./: .gitignore  PIPELINE_README.md  detect_pdf_type.py  image_preprocessing.py  main.py  ocr_pipeline.py  pyproject.toml  readme.md  requirements.txt  requirements.txt.txt  results_service_agreement_01.json  run_pipeline.py  tesseract_ocr.py  test_codes.py  test_extractor.py  test_out.txt  text _extraction_test.py
data/annotations/: dev.jsonl  dev_bert.json  train.jsonl
data/external_datasets/CUAD_v1/: master_clauses.csv
data/external_datasets/CUAD_v1/full_contract_txt/: ACCURAYINC_09_01_2010-EX-10.31-DISTRIBUTOR AGREEMENT.txt  AFSALABANCORPINC_08_01_1996-EX-1.1-AGENCY AGREEMENT.txt  AIRTECHINTERNATIONALGROUPINC_05_08_2000-EX-10.4-FRANCHISE AGREEMENT.txt  ALAMOGORDOFINANCIALCORP_12_16_1999-EX-1-AGENCY AGREEMENT.txt  ALLIANCEBANCORPINCOFPENNSYLVANIA_10_18_2006-EX-1.2-AGENCY AGREEMENT.txt  ALLISONTRANSMISSIONHOLDINGSINC_12_15_2014-EX-99.1-COOPERATION AGREEMENT.txt  ATHENSBANCSHARESCORP_11_02_2009-EX-1.2-AGENCY AGREEMENT , 2009.txt  (+96 more)
docker/: Dockerfile  docker-compose.yml
models/ner/: meta.json
models/ner/ner/: model  moves
models/ner/vocab/: strings.json
sample_out/: loan_agreement_11.csv
scripts/: convert_to_bert_format.py  rewrite_app.py  train_bert_ner.py
src/: __init__.py  pipeline.py
src/api/: app.py
src/ner/: bert_ner.py  model.py  train.py
src/ocr/: __init__.py  extractor.py
src/validation/: rules.py
tests/: test_api.py  test_extractor.py  test_ner_model.py  test_pipeline.py  test_validation_rules.py
(+6 files in other folders)
