[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fintech-intelligent-document-processing"
version = "0.1.0"
description = "Intelligent document processing / OCR + NER pipeline for PDF contracts."
readme = "readme.md"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]
